--- a/3_task/style.css
+++ b/3_task/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(230, 126, 0);
+    background-color: bisque;
     text-align: center;
     line-height: 2;
     font-family: 'Noto Serif', serif;
