--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: lightblue;
     text-align: center;
@@ -5,3 +11,72 @@ body {
 
 p{color:lightcoral}
 h1{color:greenyellow}
+
+h1, h2 {
+    margin-bottom: 30px;
+}
+
+/* Header area */
+
+header {
+    background-color: olivedrab;
+    padding: 20px;
+    text-align: right
+}
+
+header #logo a {
+    font-size: 32px;
+    float:left;
+    color:white;
+    text-decoration: none;
+}
+
+/* Main navigation*/
+
+header nav ul {
+    list-style: none;
+    padding: 20px;
+}
+
+header nav ul li {
+    display: inline-block;
+}
+
+header nav ul li a {
+    color: white;
+    text-decoration: none;
+    background-color: lightgreen;
+    padding: 15px;
+}
+
+/* Hero Banner */
+
+main #hero-banner {
+    background-image: url("https://source.unsplash.com/Bdf9aj6w2zA/1600x900");
+    height: 85vh;
+    padding: 50px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+}
+
+main #hero-banner h1 {
+    color: white;
+    text-align: center;
+    font-size: 70px;
+    
+
+}
+
+.name {
+    color: black;
+
+}
+
+#past {
+    background-color: blanchedalmond;
+    margin: 30px;
+}
+  
+
