--- a/7_task3rdweekrecap/style.css
+++ b/7_task3rdweekrecap/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -14,28 +18,30 @@ header {
   text-align: center;
 }
 
-#logo {
-  padding: 20px;
-  margin-bottom: 20px;
+header #logo img {
+  width: 300px;
+  height: auto;
 }
+
 header ul li {
   display: inline-block;
 }
 
 header ul li a {
   text-decoration: none;
+  text-transform: uppercase;
   color: black;
-  padding: 50px;
+  padding: 40px;
 }
 
 /* Hero banner */
 #hero-banner {
   background: url("https://source.unsplash.com/xNtwmcRP-gw/1400x800") no-repeat
     fixed center center/cover;
-  height: 70vh;
-  margin-top: 20px;
-  padding-top: 150px;
-  padding-left: 500px;
+  height: 85vh;
+  margin-top: 10px;
+  padding-top: 200px;
+  padding-left: 250px;
 }
 
 .container {
@@ -66,6 +72,7 @@ header ul li a {
   background-color: #333;
   padding: 10px 20px;
   border-radius: 2px;
+  text-transform: uppercase;
   color: white;
   margin-left: 10px;
   margin-top: 10px;
@@ -74,19 +81,19 @@ header ul li a {
 /* About Us */
 
 #about {
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 #about img {
   float: right;
-  margin-right: 200px;
-  margin-left: 100px;
+  margin-right: 100px;
+  margin-left: 30px;
   border-radius: 3px;
 }
 
 #about .content {
   padding-bottom: 150px;
-  padding-left: 400px;
+  padding-left: 150px;
 }
 
 #about .content h2 {
@@ -98,26 +105,124 @@ header ul li a {
   line-height: 1.5;
 }
 
-/* Footer */
+/* Footer Right content */
 
 footer {
   background-color: #333;
   color: white;
 }
 
-footer .content {
+footer .content2 {
+  width: 400px;
   float: right;
+  margin-right: 180px;
+  line-height: 1.5;
+  padding-top: 50px;
 }
 
-footer form .names label {
+footer .content2 h2 {
+  padding-bottom: 20px;
+}
+
+/* footer form general */
+
+form {
+  margin-left: 170px;
+  padding-top: 50px;
+  max-width: 450px;
+}
+
+/* form Contact us */
+
+form h2 {
+  padding-bottom: 20px;
+}
+
+form .form-group {
+  padding-bottom: 20px;
+}
+
+form .form-group label {
+  width: 150px;
   display: inline-block;
-  float: left;
-  clear: left;
+}
+
+form .form-group input {
   width: 250px;
-  text-align: right;
+  height: 30px;
+  border-radius: 2px;
+  border: none;
 }
 
-footer form .names input {
-  display: inline-block;
-  float: left;
+/* newsletter and radio */
+
+form .newsletter h3 {
+  padding-bottom: 20px;
+}
+
+form .newsletter {
+  padding-top: 20px;
+  border-top-style: dotted;
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+form .newsletter .radio1,
+.radio2 {
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+
+form .newsletter input {
+  transform: scale(1.5);
+}
+
+form .newsletter label {
+  padding-left: 20px;
+}
+
+/* How did you find us? */
+
+.how {
+  padding-top: 20px;
+  border-top: dotted;
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+.how h3 {
+  padding-bottom: 20px;
+}
+
+.how .form-group2 {
+  padding-bottom: 20px;
+  padding-left: 20px;
+}
+
+.how .form-group2 label {
+  padding-left: 20px;
+}
+
+.how .form-group2 input {
+  transform: scale(1.5);
+}
+
+.how .form-group2 textarea {
+  width: 400px;
+  height: 50px;
+  border-radius: 2px;
+  border: none;
+}
+
+.how .form-group2 ::placeholder {
+  font-size: 20px;
+}
+
+.how button {
+  margin-bottom: 30px;
+  background-color: #fe6000;
+  color: white;
+  text-transform: uppercase;
+  width: 100px;
+  height: 40px;
+  border: none;
+  border-radius: 2px;
 }
