--- a/7_task3rdweekrecap/style.css
+++ b/7_task3rdweekrecap/style.css
@@ -31,7 +31,15 @@ header ul li a {
   text-decoration: none;
   text-transform: uppercase;
   color: black;
-  padding: 40px;
+  padding: 20px;
+  border-bottom: 4px solid transparent;
+  display: block;
+}
+
+header nav ul li a:hover {
+  color: #fe6000;
+  font-weight: bold;
+  border-bottom: 4px solid #fe6000;
 }
 
 /* Hero banner */
