--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -12,7 +12,6 @@ body {
   font-family: 'Source Code Pro', monospace;
 }
 
-h1,
 h2 {
   margin-bottom: 30px;
 }
@@ -246,18 +245,14 @@ footer form button {
 
 @media (max-width: 768px) {
   main #past .containerPast {
-    padding-bottom: 5rem;
-    display: flex;
     flex-direction: column;
     align-items: center;
   }
   main #past h2 {
     padding-left: 22rem;
-    padding-top: 3rem;
   }
 
   main #present {
-    display: flex;
     flex-direction: column;
     align-items: center;
   }
@@ -268,8 +263,6 @@ footer form button {
   }
 
   footer form {
-    margin: 0 auto;
-    width: 60%;
     text-align: center;
   }
 
@@ -286,8 +279,6 @@ footer form button {
   }
 
   main #hero-banner h1 {
-    color: white;
-    text-align: center;
     font-size: 35px;
   }
 
@@ -297,5 +288,83 @@ footer form button {
 
   footer form .form-group label {
     text-align: center;
+  }
+}
+
+/* Iphone5 */
+
+@media (max-width: 320px) {
+  header nav ul {
+    margin-left: 4.2rem;
+    font-size: 10px;
+    padding: 0 1rem 0 0;
+  }
+
+  main #hero-banner h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    margin-bottom: 1rem;
+    font-size: 15px;
+  }
+
+  main #past .containerPast {
+    padding-bottom: 2rem;
+  }
+
+  main #past h2 {
+    padding-left: 8.5rem;
+    padding-top: 2rem;
+  }
+
+  main #past .box {
+    width: 19rem;
+    height: 27rem;
+    font-size: 10px;
+  }
+
+  main #past .box h3,
+  p,
+  a {
+    padding: 5px 0;
+    line-height: 2;
+  }
+
+  main #present .content {
+    padding: 1rem;
+  }
+
+  main #present .content p {
+    font-size: 10px;
+  }
+
+  main #future .container {
+    padding: 2rem;
+    font-size: 10px;
+  }
+
+  main #future img {
+    width: 100%;
+  }
+
+  footer form {
+    margin-right: 2rem;
+  }
+
+  footer form .form-group label {
+    font-size: 10px;
+    text-align: left;
+  }
+
+  footer form .form-group input,
+  footer form .form-group textarea {
+    padding: 0.5rem 4rem;
+    font-size: 10px;
+  }
+
+  footer form button {
+    font-size: 10px;
+    padding: 5px 10px;
   }
 }
