--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: 'Source Code Pro', monospace;
+  font-family: "Source Code Pro", monospace;
 }
 
 h2 {
@@ -18,15 +18,11 @@ h2 {
 
 .container {
   max-width: 75rem;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(255, 255, 255, 0.85);
   padding: 3rem;
   border-radius: 2px;
   min-height: 25%;
   margin: 0 auto;
-}
-
-#future .container {
-  opacity: 0.9;
 }
 
 /* Header area */
@@ -36,6 +32,9 @@ header {
   padding: 1.25rem;
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  z-index: 2;
 }
 
 header #logo a {
@@ -68,43 +67,53 @@ header nav ul li a:hover {
 /* Hero Banner */
 
 main #hero-banner {
-  background: url('https://source.unsplash.com/Bdf9aj6w2zA/1600x900') no-repeat
+  background: url("https://source.unsplash.com/KMn4VEeEPR8/1600x900") no-repeat
     fixed center center/cover;
   height: 85vh;
   padding: 3.125rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+#hero-banner::before {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 main #hero-banner h1 {
   color: white;
   text-align: center;
   font-size: 4.375rem;
+  z-index: 1;
 }
 
 main #hero-banner span {
   color: black;
 }
 
-/* past section */
+/* work section */
 
-main #past {
+main #work {
   background-color: lightslategray;
 }
 
-main #past h2 {
+main #work h2 {
   padding-left: 5rem;
   padding-top: 3rem;
 }
 
-main #past .containerPast {
+main #work .containerWork {
   padding-bottom: 5rem;
   display: flex;
   justify-content: center;
 }
 
-main #past .box {
+main #work .box {
   background-color: white;
   border-radius: 5px;
   box-shadow: 2px 2px 10px 0px;
@@ -116,67 +125,113 @@ main #past .box {
   flex-direction: column;
 }
 
-main #past .box:hover {
+main #work .box:hover {
   box-shadow: 2px 2px 15px 2px;
 }
 
-main #past .box img {
+main #work .box img {
   border-radius: 5px;
 }
 
-main #past .box h3,
+main #work .box h3,
 p,
 a {
   padding: 1rem 0;
   line-height: 2;
 }
 
-main #past .box a {
+main #work .box a {
   text-decoration: none;
   color: rgb(145, 13, 13);
 }
 
-/* future section */
+/* Experience section */
 
-main #future {
-  background-color: lightslategray;
-  padding: 3rem;
-}
-
-main #future img {
-  width: 18rem;
-  float: left;
-  margin-right: 3rem;
-  border-radius: 5px;
-}
-
-main #future p {
-  line-height: 2;
-}
-
-main #future {
-  background: url('https://source.unsplash.com//E0AHdsENmDg') no-repeat fixed
-    center center/cover;
-}
-
-/* Present section */
-
-main #present {
+main #experience {
   display: flex;
   justify-content: space-between;
 }
 
-main #present img {
+main #experience img {
   width: 50%;
   margin-right: 3rem;
 }
 
-main #present .content {
+main #experience .content {
   padding: 3rem;
 }
 
-main #present .content p {
+main #experience .content p {
   line-height: 2;
+}
+
+/* Skills section */
+
+main #skills {
+  background: url("https://source.unsplash.com//E0AHdsENmDg") no-repeat fixed
+    center center/cover;
+  padding: 5rem;
+}
+
+main #skills .containerSkills {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: 20rem;
+}
+
+main #skills .containerSkills .box {
+  width: 15rem;
+  height: 17rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 5px 2px rgb(180, 180, 180);
+}
+
+#skills .box:nth-child(even) {
+  background-color: rgba(197, 197, 197, 0.5);
+}
+
+#skills .box:nth-child(odd) {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+main #skills .container .box .myProgress {
+  width: 12rem;
+  height: 1.5rem;
+  border-radius: 2px;
+  background-color: rgb(241, 241, 241);
+  box-shadow: inset -2px 2px 3px rgb(175, 175, 175);
+}
+
+main #skills .container .box .myProgress #myBar {
+  width: 25%;
+  height: 100%;
+  border-radius: 2px;
+  background-color: black;
+}
+
+main #skills .container .box .myProgress #myBar2 {
+  width: 15%;
+  height: 100%;
+  border-radius: 2px;
+  background-color: black;
+}
+
+main #skills .container .box .myProgress #myBar3 {
+  width: 80%;
+  height: 100%;
+  border-radius: 2px;
+  background-color: black;
+}
+
+main #skills .container .box .myProgress #myBar4 {
+  width: 90%;
+  height: 100%;
+  border-radius: 2px;
+  background-color: black;
 }
 
 /* footer */
@@ -244,22 +299,32 @@ footer form button {
 /* Tablets up to 768px */
 
 @media (max-width: 768px) {
-  main #past .containerPast {
+  main #work .containerWork {
     flex-direction: column;
     align-items: center;
   }
-  main #past h2 {
+  main #work h2 {
     padding-left: 22rem;
   }
 
-  main #present {
+  main #experience {
     flex-direction: column;
     align-items: center;
   }
 
-  main #present img {
+  main #experience img {
     width: 100%;
     margin-right: 0;
+  }
+
+  main #skills h2 {
+    text-align: center;
+  }
+
+  main #skills .containerSkills {
+    flex-direction: column;
+    align-items: center;
+    height: 75rem;
   }
 
   footer form {
@@ -268,26 +333,6 @@ footer form button {
 
   footer form button {
     margin-left: 0;
-  }
-}
-
-/* Landscape phones up to 576px */
-
-@media (max-width: 576px) {
-  header {
-    font-size: 12px;
-  }
-
-  main #hero-banner h1 {
-    font-size: 35px;
-  }
-
-  main #past h2 {
-    padding-left: 16rem;
-  }
-
-  footer form .form-group label {
-    text-align: center;
   }
 }
 
@@ -309,43 +354,38 @@ footer form button {
     font-size: 15px;
   }
 
-  main #past .containerPast {
+  main #work .containerWork {
     padding-bottom: 2rem;
   }
 
-  main #past h2 {
+  main #work h2 {
     padding-left: 8.5rem;
     padding-top: 2rem;
   }
 
-  main #past .box {
+  main #work .box {
     width: 19rem;
     height: 27rem;
     font-size: 10px;
   }
 
-  main #past .box h3,
+  main #work .box h3,
   p,
   a {
     padding: 5px 0;
     line-height: 2;
   }
 
-  main #present .content {
+  main #experience .content {
     padding: 1rem;
   }
 
-  main #present .content p {
+  main #experience .content p {
     font-size: 10px;
   }
 
-  main #future .container {
-    padding: 2rem;
-    font-size: 10px;
-  }
-
-  main #future img {
-    width: 100%;
+  main #skills {
+    padding: 20px;
   }
 
   footer form {
