add support and logo, add changes

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: "Source Code Pro", monospace;
+  font-family: 'Source Code Pro', monospace;
 }
 
 h2 {
@@ -37,6 +37,10 @@ header {
   z-index: 2;
 }
 
+header #logo {
+  margin-top: auto;
+}
+
 /* Main navigation*/
 
 header nav ul {
@@ -61,7 +65,7 @@ header nav ul li a:hover {
 /* Hero Banner */
 
 main #hero-banner {
-  background: url("https://source.unsplash.com/KMn4VEeEPR8/1600x900") no-repeat
+  background: url('https://source.unsplash.com/KMn4VEeEPR8/1600x900') no-repeat
     fixed center center/cover;
   height: 85vh;
   padding: 3.125rem;
@@ -73,7 +77,7 @@ main #hero-banner {
 
 #hero-banner::before {
   position: absolute;
-  content: "";
+  content: '';
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.3);
@@ -162,7 +166,7 @@ main #experience .content p {
 /* Skills section */
 
 main #skills {
-  background: url("https://source.unsplash.com//E0AHdsENmDg") no-repeat fixed
+  background: url('https://source.unsplash.com//E0AHdsENmDg') no-repeat fixed
     center center/cover;
   padding: 5rem;
 }
@@ -333,10 +337,22 @@ footer form button {
 /* Iphone5 */
 
 @media (max-width: 320px) {
+  header {
+    font-size: 11px;
+    padding: 5px;
+    align-items: center;
+  }
+
+  header #logo {
+    margin-bottom: -5px;
+  }
+
   header nav ul {
-    margin-left: 4.2rem;
-    font-size: 10px;
-    padding: 0 1rem 0 0;
+    padding: 5px;
+  }
+
+  header nav ul li a {
+    padding: 1px;
   }
 
   main #hero-banner h1 {
