--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -43,23 +43,58 @@ header #logo {
 
 /* Main navigation*/
 
-header nav ul {
+header nav {
   list-style: none;
   padding: 1.25rem;
+  display: flex;
 }
 
-header nav ul li {
-  display: inline-block;
+header nav ul {
+  list-style: none;
 }
 
-header nav ul li a {
-  color: white;
+.menu-bar li a {
+  padding-bottom: 2.5rem;
+}
+
+.nodeco {
   text-decoration: none;
-  padding: 1.25rem;
+  color: white;
 }
 
-header nav ul li a:hover {
-  background-color: slategray;
+.fas {
+  padding: 5px;
+  color: white;
+}
+
+.menu-bar {
+  position: relative;
+  display: inline-block;
+  margin-right: 2rem;
+}
+
+.sub-menu {
+  display: none;
+  position: absolute;
+}
+
+.sub-menu li a {
+  color: black;
+  padding: 5px 0;
+  border-bottom: 4px solid transparent;
+}
+
+.sub-menu li a:hover {
+  border-bottom: 4px solid rgb(77, 77, 77);
+}
+
+.menu-bar:hover .sub-menu {
+  display: block;
+  background-color: white;
+  width: 10rem;
+  padding: 1rem;
+  margin-top: 2rem;
+  right: 0;
 }
 
 /* Hero Banner */
@@ -211,6 +246,70 @@ progress[value]::-webkit-progress-bar {
 progress[value]::-webkit-progress-value {
   border-radius: 2px;
   background-color: black;
+}
+
+/* Gallery */
+
+#gallery {
+  background-color: rgb(245, 233, 212);
+  padding: 10rem 4rem;
+}
+
+#gallery .grid-container {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(9, 5vw);
+  grid-gap: 5px;
+}
+
+#gallery .gallery_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.dog {
+  grid-column: 1/3;
+  grid-row: 1/4;
+}
+
+.monkey {
+  grid-column: 3/5;
+  grid-row: 1/4;
+}
+
+.fish {
+  grid-column: 5 / span 3;
+  grid-row: 1/5;
+}
+
+.giraffe {
+  grid-row: 1 / 10;
+}
+
+.panda {
+  grid-column: 5/8;
+  grid-row: 5/8;
+}
+
+.sloth {
+  grid-column: 5/8;
+  grid-row: 8 / span 2;
+}
+
+.elephant {
+  grid-column: span 2;
+  grid-row: 4 / 10;
+}
+
+.penguin {
+  grid-column: span 2;
+  grid-row: span 4;
+}
+
+.seal {
+  grid-column: span 2;
+  grid-row: span 2;
 }
 
 /* footer */
