--- a/14_taskJobsinFinland/style.css
+++ b/14_taskJobsinFinland/style.css
@@ -14,6 +14,10 @@
   font-family: 'FinBold';
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Fin';
   background-color: #dfdfdf;
@@ -33,7 +37,12 @@ a {
   margin: 0 2.5%;
 }
 
+i {
+  cursor: pointer;
+}
+
 /*/ fixed header (JS) */
+
 .sticky {
   position: fixed;
   top: 0;
@@ -88,6 +97,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   z-index: 2;
+  position: relative;
 }
 
 nav ul {
@@ -109,11 +119,11 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  border-bottom: 5px solid white;
+  border-bottom: 3px solid white;
 }
 
 nav .home {
-  border-bottom: 5px solid white;
+  border-bottom: 3px solid white;
 }
 
 /* toggle search */
@@ -134,11 +144,10 @@ nav i {
 .togglesearch {
   background: white;
   position: absolute;
-  top: 125px;
-  right: 5%;
+  margin-top: 16px;
+  right: 30px;
   width: 230px;
   height: 60px;
-  line-height: 40px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-top: 4px solid white;
   z-index: 4;
@@ -554,4 +563,39 @@ footer .item:nth-child(4) {
   margin-left: 2rem;
   margin-top: 1.5rem;
   font-family: 'FinBold';
+}
+
+/* tablets up to 768 px */
+
+@media (max-width: 768px) {
+  #container {
+    max-width: 100%;
+    margin: 0;
+  }
+
+  .sticky {
+    width: 100%;
+  }
+
+  #category .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  #category .item {
+    height: 150px;
+    width: 200px;
+  }
+
+  #region .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  #region .item {
+    height: 150px;
+    width: 200px;
+  }
+
+  footer .item {
+    width: 150px;
+  }
 }
